Avatar, User, Typo
- Avatar : Change status round size
- Added user style
- Typography : added text-align: justify

--- a/test/test.html
+++ b/test/test.html
@@ -568,7 +568,7 @@
 			<i>Jhon Doe</i>
 		</blockquote>
 
-		<!-- ################################ BLOCKQUOTE ################################-->
+		<!-- ################################ AVATARS ################################-->
 		<div class="spacer">
 			<h2>Avatars</h2>
 		</div>
@@ -579,6 +579,22 @@
 		
 		<div class="ms-avatar ms-small" style="display:inline-block;">
 		    <span class="ms-text">RM</span>
+		</div>
+
+		<!-- ################################ User ################################-->
+		<div class="spacer">
+			<h2>User</h2>
+		</div>
+		<div class="ms_col ms_col--2-of-5" style="box-sizing: border-box;">
+		    <div class="ms-user">
+		        <div class="ms-avatar">
+		            <img class="ms-avatar-img" src="https://randomuser.me/api/portraits/women/3.jpg" alt="...">
+		        </div>
+		        <div class="ms-user-info">
+		            <b>John Doe</b><br/>
+		            Software Engineer
+		        </div>
+		    </div>
 		</div>
 
 		
