Fix padding button.

--- a/test/user.html
+++ b/test/user.html
@@ -37,7 +37,7 @@
 							</p>
 						</div>
 						<div class="ms-user-content">
-							<button class="ms-btn ms-medium ms-fullwidth">Message</button>
+							<button class="ms-btn ms-fullwidth">Message</button>
 						</div>
 						<div class="ms-user-pined">
 							<a href="#"><i class="fas fa-cog fa-lg"></i></a>
@@ -62,7 +62,7 @@
 							</p>
 						</div>
 						<div class="ms-user-content">
-							<button class="ms-btn ms-info ms-fullwidth">
+							<button class="ms-btn ms-info">
 								<i class="fas fa-user-plus"></i> Add
 							</button>
 						</div>
