--- a/test/user.html
+++ b/test/user.html
@@ -62,7 +62,7 @@
 							</p>
 						</div>
 						<div class="ms-user-content">
-							<button class="ms-btn ms-info">
+							<button class="ms-btn ms-info ms-center">
 								<i class="fas fa-user-plus"></i> Add
 							</button>
 						</div>
