--- a/test/user.html
+++ b/test/user.html
@@ -43,6 +43,38 @@
 							<a href="#"><i class="fas fa-cog fa-lg"></i></a>
 						</div>
 					</div>
+
+					<div class="ms-user ms-border">
+						<div class="ms-avatar ms-large">
+							<img
+								class="ms-avatar-img"
+								src="https://randomuser.me/api/portraits/women/65.jpg"
+								alt="..."
+							/>
+							<span class="ms-status ms-success"></span>
+						</div>
+						<div class="ms-user-info">
+							<p>
+								<b>John Doe</b><br />
+								<i>Software Engineer</i><br />
+								<a
+									href="#"
+									style="margin: 5px"
+									class="ms-btn ms-small ms-outline ms-primary"
+									><i class="fab fa-github fa-lg"></i
+								></a>
+								<a href="#" class="ms-btn ms-small ms-outline ms-primary"
+									><i class="fab fa-twitter fa-lg"></i
+								></a>
+							</p>
+						</div>
+						<div class="ms-user-content">
+							<button class="ms-btn ms-fullwidth">Message</button>
+						</div>
+						<div class="ms-user-pined">
+							<a href="#"><i class="fas fa-cog fa-lg"></i></a>
+						</div>
+					</div>
 				</div>
 
 				<div class="col-6">
