--- a/test/tab.html
+++ b/test/tab.html
@@ -30,7 +30,7 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-8">
 					<div class="ms-tab">
 						<ul>
 							<li><a href="#" class="ms-active">Soccer</a></li>
@@ -40,38 +40,112 @@
 							<li><a href="#">Baseball</a></li>
 						</ul>
 					</div>
+
+					<div class="ms-article">
+                        <div class="ms-article-picture">
+                            <img src="https://images.unsplash.com/photo-1578165219176-ece04edbd053?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="background">
+                            <div class="ms-article-picture-overlay"></div>
+                            <div class="ms-article-picture-title">
+                                <a href="">Lorem ipsum dolor sit amet adipisicing elit.</a>
+                            </div>
+                        </div>
+                        <div class="ms-article-infos">
+                            <ul>
+                                <li><i class="fas fa-user-circle"></i> Author <b>John Doe</b></li>
+                                <li><i class="fas fa-folder"></i> Category <b>IT</b></li>
+                                <li><i class="fas fa-clock"></i> Time <b>42 minutes later</b></li>
+                            </ul>
+                        </div>
+                        <div class="ms-list-label">
+                            <ul>
+                                <li>
+                                    <div class="ms-label ms-primary ms-rounded"><a href=""><i class="fab fa-twitter"></i></a></div>
+                                    <div class="ms-label ms-primary ms-rounded"><a href=""><i class="fab fa-facebook-f"></i></a></div>
+                                    <div class="ms-label ms-primary ms-rounded"><a href=""><i class="fab fa-linkedin-in"></i></a></div>
+                                    <div class="ms-label ms-rounded"><a href=""><i class="fab fa-github-alt"></i></a></div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="ms-article-title">
+                            <a href="">Article's title</a>
+                        </div>
+                        <div class="ms-article-text">
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nulla libero sint repudiandae amet sed in magnam nam aliquid inventore natus non labore ipsam, quam enim dolorum! Labore, dolorum ratione
+                                Lorem ipsum dolor sit <b>amet consectetur</b> adipisicing elit. Explicabo, 
+                                hic velit sed ea quod sunt quam dicta beatae quia optio deserunt ex quae repellendus eaque cum, sapiente veniam mollitia ipsa.
+                                <blockquote class="ms-blockquote">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                                </blockquote>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, 
+                                hic velit sed ea quod sunt <a href="">quam dicta beatae</a> quia optio deserunt ex quae repellendus eaque cum, sapiente veniam mollitia ipsa.
+                                <h3>Second title</h3>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nulla libero sint repudiandae amet sed in magnam nam aliquid inventore natus non labore ipsam, quam enim dolorum! Labore, dolorum ratione!
+                            </p>
+                        </div>
+                        <div class="ms-user ms-compact ms-borderless">
+                            <div class="ms-avatar">
+                                <img class="ms-avatar-img" src="https://randomuser.me/api/portraits/women/68.jpg" alt="...">
+                            </div>
+                            <div class="ms-user-info">
+                                <p>
+                                    <b>John Doe</b><br/>
+                                    <i>Software Engineer</i><br/>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
 				</div>
-				<div class="col-md-6">
-					<div class="ms-tab ms-fullwidth ms-info">
-						<ul>
-							<li>
-								<a href="#"><i class="fas fa-igloo"></i> Home</a>
-							</li>
-							<li>
-								<a href="#" class="ms-active"
-									><i class="far fa-file-word"></i> Doc</a
-								>
-							</li>
-							<li>
-								<a href="#"><i class="far fa-envelope"></i> Contact</a>
-							</li>
-						</ul>
+				<div class="col-md-4">
+					<div class="ms-card">
+						<div class="ms-card-pic">
+							<a href="#" target="_blank">
+								<img
+									src="https://images.unsplash.com/photo-1460046205962-bd8fa3a96a35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+									alt="..."
+								/>
+							</a>
+						</div>
+						<div class="ms-card-title">
+							<h2>Yosemite national park</h2>
+							<span>California</span>
+						</div>
+						<div class="ms-card-content">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+								itaque maxime soluta hic? Iure reiciendis facere qui beatae
+								quasi repellendus, nemo incidunt quod! Quae sed odit illo. Amet,
+								rerum et!
+							</p>
+						</div>
+						<div class="ms-card-btn">
+							<button class="ms-btn ms-outline">Read</button>
+						</div>
 					</div>
-				</div>
-				<div class="col-md-6">
-					<div class="ms-tab ms-error">
-						<ul>
-							<li class="ms-logo">
-								<a href="#"
-									><img src="https://minstyle.io/img/logo.png" alt="Logo"
-								/></a>
-							</li>
-							<li><a href="#" class="ms-active">Soccer</a></li>
-							<li><a href="#">Basket-ball</a></li>
-							<li><a href="#">Golf</a></li>
-							<li><a href="#">VTT</a></li>
-							<li><a href="#">Baseball</a></li>
-						</ul>
+					<div class="ms-card">
+						<div class="ms-card-pic">
+							<a href="#" target="_blank">
+								<img
+									src="https://images.unsplash.com/photo-1460046205962-bd8fa3a96a35?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+									alt="..."
+								/>
+							</a>
+						</div>
+						<div class="ms-card-title">
+							<h2>Yosemite national park</h2>
+							<span>California</span>
+						</div>
+						<div class="ms-card-content">
+							<p>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+								itaque maxime soluta hic? Iure reiciendis facere qui beatae
+								quasi repellendus, nemo incidunt quod! Quae sed odit illo. Amet,
+								rerum et!
+							</p>
+						</div>
+						<div class="ms-card-btn">
+							<button class="ms-btn ms-outline">Read</button>
+						</div>
 					</div>
 				</div>
 			</div>
