Alignment of all color shades.

--- a/test/avatar.html
+++ b/test/avatar.html
@@ -44,7 +44,7 @@
 				</div>
 			</div>
 
-			<div class="ms-card ms-fill">
+			<div class="ms-card">
 				<div class="ms-avatar ms-small">
 					<span class="ms-text">RM</span>
 				</div>
