--- a/test/dropdown.html
+++ b/test/dropdown.html
@@ -91,7 +91,7 @@
 					</div>
 
 					<div class="ms-dropdown">
-						<button class="ms-btn ms-action2 ms-outline ms-large">
+						<button class="ms-btn ms-primary ms-outline ms-large">
 							Versions <i class="fas fa-sort-down"></i>
 						</button>
 						<div class="ms-dropdown-content">
