--- a/test/label.html
+++ b/test/label.html
@@ -31,6 +31,14 @@
 				<div class="ms-label ms-action ms-light">label</div>
 				<div class="ms-label ms-action2 ms-light">label</div>
 			</div>
+
+			<div class="row">
+				<div class="ms-label ms-border ms-primary">label</div>
+				<div class="ms-label ms-border">label</div>
+				<div class="ms-label ms-border ms-secondary">label</div>
+				<div class="ms-label ms-border ms-action">label</div>
+				<div class="ms-label ms-border ms-action2">label</div>
+			</div>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/dark-mode-switcher@0.0.1/dist/dark.min.js"></script>
 		<script
