--- a/test/progressbar.html
+++ b/test/progressbar.html
@@ -75,9 +75,13 @@
 						</div>
 					</div>
 					<div class="ms-progress ms-light">
-						<div class="ms-progress-fill ms-primary" style="width: 30%">
-							30%
-						</div>
+						<div class="ms-progress-fill" style="width: 30%"></div>
+					</div>
+					<div class="ms-progress ms-light">
+						<div class="ms-progress-fill ms-primary" style="width: 30%"></div>
+					</div>
+					<div class="ms-progress ms-light">
+						<div class="ms-progress-fill ms-secondary" style="width: 30%"></div>
 					</div>
 				</div>
 			</div>
