--- a/test/user.html
+++ b/test/user.html
@@ -19,7 +19,7 @@
 								src="https://randomuser.me/api/portraits/women/65.jpg"
 								alt="..."
 							/>
-							<span class="ms-status ms-success"></span>
+							<span class="ms-status ms-on"></span>
 						</div>
 						<div class="ms-user-info">
 							<p>
@@ -51,7 +51,7 @@
 								src="https://randomuser.me/api/portraits/women/65.jpg"
 								alt="..."
 							/>
-							<span class="ms-status ms-success"></span>
+							<span class="ms-status ms-off"></span>
 						</div>
 						<div class="ms-user-info">
 							<p>
@@ -85,7 +85,7 @@
 								src="https://randomuser.me/api/portraits/men/91.jpg"
 								alt="..."
 							/>
-							<span class="ms-status ms-error"></span>
+							<span class="ms-status ms-secondary"></span>
 						</div>
 						<div class="ms-user-info">
 							<p>
@@ -94,7 +94,7 @@
 							</p>
 						</div>
 						<div class="ms-user-content">
-							<button class="ms-btn ms-info ms-center">
+							<button class="ms-btn ms-secondary ms-center">
 								<i class="fas fa-user-plus"></i> Add
 							</button>
 						</div>
@@ -133,7 +133,9 @@
 							</p>
 						</div>
 						<div class="ms-user-content">
-							<button class="ms-btn ms-medium ms-fullwidth">Message</button>
+							<button class="ms-btn ms-medium ms-fullwidth ms-primary">
+								Message
+							</button>
 						</div>
 						<div class="ms-user-pined">
 							<a href="#"><i class="fas fa-cog fa-lg"></i></a>
