--- a/test/breadcrumb.html
+++ b/test/breadcrumb.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="row">
+			<div class="row" style="margin: 20px 0">
 				<div class="ms-breadcrumb">
 					<ul>
 						<li>Home</li>
@@ -20,7 +20,17 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row" style="margin: 20px 0">
+				<div class="ms-breadcrumb ms-box-shadow">
+					<ul>
+						<li>Home</li>
+						<li>Buttons</li>
+						<li><a href="#">Colors</a></li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="row" style="margin: 20px 0">
 				<div class="ms-breadcrumb ms-background">
 					<ul>
 						<li>Home</li>
@@ -30,7 +40,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row" style="margin: 20px 0">
 				<div class="ms-breadcrumb ms-border">
 					<ul>
 						<li><a href="#">Home</a></li>
