--- a/test/button.html
+++ b/test/button.html
@@ -101,6 +101,16 @@
 						<a class="ms-btn ms-underline">Three</a>
 					</div>
 				</div>
+
+				<div class="col">
+					<button class="ms-btn">
+						<div class="ms-loading ms-small ms-primary"></div>
+					</button>
+
+					<button class="ms-btn ms-primary">
+						<div class="ms-loading ms-small ms-primary"></div>
+					</button>
+				</div>
 			</div>
 		</div>
 
