--- a/test/loading.html
+++ b/test/loading.html
@@ -31,18 +31,18 @@
 
 		<div class="container">
 			<div class="row">
-				<details>
-					<summary>Details</summary>
-					Something small enough to escape casual notice.
-				</details>
+				<div class="col">
+					<div class="ms-loading ms-small"></div>
+					<div class="ms-loading"></div>
+					<div class="ms-loading ms-medium"></div>
+					<div class="ms-loading ms-large"></div>
+				</div>
 
 				<div class="col">
-					<div class="ms-loading">
-						<div class="ms-loading-circle"></div>
-						<div class="ms-loading-circle"></div>
-						<div class="ms-loading-circle"></div>
-						<div class="ms-loading-circle"></div>
-					</div>
+					<div class="ms-loading ms-small ms-primary"></div>
+					<div class="ms-loading ms-secondary"></div>
+					<div class="ms-loading ms-medium ms-action"></div>
+					<div class="ms-loading ms-large ms-action2"></div>
 				</div>
 			</div>
 		</div>
