--- a/test/label.html
+++ b/test/label.html
@@ -11,9 +11,9 @@
 	<body>
 		<div class="container">
 			<div class="ms-label ms-small">label</div>
-			<div class="ms-label">label</div>
-			<div class="ms-label ms-medium">label</div>
-			<div class="ms-label ms-large">label</div>
+			<div class="ms-label">label <span class="ms-close"></span></div>
+			<div class="ms-label ms-medium">label <span class="ms-close"></span></div>
+			<div class="ms-label ms-large">label <span class="ms-close"></span></div>
 
 			<div class="row" style="margin-top: 30px">
 				<div class="ms-label">label</div>
