--- a/test/form.html
+++ b/test/form.html
@@ -45,7 +45,12 @@
 			<div class="row">
 				<div class="ms-form-group">
 					<label for="Email">Email</label>
-					<input type="email" placeholder="email" id="Email" />
+					<input
+						type="email"
+						placeholder="email"
+						id="Email"
+						class="ms-fullwidth"
+					/>
 				</div>
 
 				<div class="ms-form-group">
