Browser, Button, Blockquote, Loading
- Fix browser dots margin.
- Fix loading sizes.
- Fix Blockquote border color.
- Fix loading button.

--- a/test/button.html
+++ b/test/button.html
@@ -108,7 +108,7 @@
 					</button>
 
 					<button class="ms-btn ms-primary">
-						<div class="ms-loading ms-small ms-primary"></div>
+						<div class="ms-loading ms-small ms-primary"></div> Loading
 					</button>
 				</div>
 			</div>
