--- a/test/form.html
+++ b/test/form.html
@@ -127,7 +127,7 @@
 
 			<div class="row">
 				<div class="col-md-2">
-					<div class="ms-form-group">
+					<div class="ms-form-group-inline">
 						<label for="Login">Login</label>
 						<input
 							type="text"
@@ -137,12 +137,12 @@
 						/>
 					</div>
 
-					<div class="ms-form-group">
+					<div class="ms-form-group-inline">
 						<label for="Login">Login</label>
 						<input type="text" placeholder="default..." id="Login" />
 					</div>
 
-					<div class="ms-form-group">
+					<div class="ms-form-group-inline">
 						<label for="Login">Login</label>
 						<input
 							type="text"
@@ -152,7 +152,7 @@
 						/>
 					</div>
 
-					<div class="ms-form-group">
+					<div class="ms-form-group-inline">
 						<label for="Login">Login</label>
 						<input
 							type="text"
