--- a/test/table.html
+++ b/test/table.html
@@ -87,6 +87,37 @@
 				</table>
 			</div>
 		</div>
+
+		<div class="container">
+			<div class="row">
+				<table class="ms-table ms-border ms-striped">
+					<thead>
+						<tr>
+							<th>Rank</th>
+							<th>Team</th>
+							<th>Point(s)</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>FC Barcelona</td>
+							<td>98</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Real Madrid</td>
+							<td>87</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Atletico Madrid</td>
+							<td>80</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 		<script src="https://cdn.jsdelivr.net/npm/dark-mode-switcher@0.0.1/dist/dark.min.js"></script>
 		<script
 			type="text/javascript"
