--- a/test/button.html
+++ b/test/button.html
@@ -55,6 +55,13 @@
 						<i class="fas fa-battery-three-quarters"></i> Lets start !</button
 					><br /><br />
 
+					<button class="ms-btn ms-btn-active" href="#">Actived</button>
+					<button class="ms-btn ms-primary ms-btn-active" href="#">Actived</button>
+					<button class="ms-btn ms-secondary ms-btn-active" href="#">Actived</button>
+					<button class="ms-btn ms-action ms-btn-active" href="#">Actived</button>
+					<button class="ms-btn ms-action2 ms-btn-active" href="#">Actived</button>
+					<br/><br/>
+
 					<button class="ms-btn ms-primary ms-disabled" href="#">
 						Lets start !</button
 					><br /><br />
@@ -108,7 +115,8 @@
 					</button>
 
 					<button class="ms-btn ms-primary">
-						<div class="ms-loading ms-small ms-primary"></div> Loading
+						<div class="ms-loading ms-small ms-primary"></div>
+						Loading
 					</button>
 				</div>
 			</div>
