--- a/test/label.html
+++ b/test/label.html
@@ -15,29 +15,37 @@
 			<div class="ms-label ms-medium">label <span class="ms-close"></span></div>
 			<div class="ms-label ms-large">label <span class="ms-close"></span></div>
 
-			<div class="row" style="margin-top: 30px">
+			<div class="row ms-mt-1" style="margin-top: 30px">
 				<div class="ms-label">label</div>
 			</div>
-			<div class="row">
+			<div class="row ms-mt-1">
 				<div class="ms-label ms-primary">label</div>
 				<div class="ms-label ms-secondary">label</div>
 				<div class="ms-label ms-action">label</div>
 				<div class="ms-label ms-action2">label</div>
 			</div>
 
-			<div class="row">
+			<div class="row ms-mt-1">
 				<div class="ms-label ms-primary ms-light">label</div>
 				<div class="ms-label ms-secondary ms-light">label</div>
 				<div class="ms-label ms-action ms-light">label</div>
 				<div class="ms-label ms-action2 ms-light">label</div>
 			</div>
 
-			<div class="row">
+			<div class="row ms-mt-1">
 				<div class="ms-label ms-border ms-primary">label</div>
 				<div class="ms-label ms-border">label</div>
 				<div class="ms-label ms-border ms-secondary">label</div>
 				<div class="ms-label ms-border ms-action">label</div>
 				<div class="ms-label ms-border ms-action2">label</div>
+			</div>
+			
+			<div class="row ms-mt-1">
+				<div class="ms-label ms-border ms-primary ms-label-active">label</div>
+				<div class="ms-label ms-border ms-label-active">label</div>
+				<div class="ms-label ms-border ms-secondary ms-label-active">label</div>
+				<div class="ms-label ms-border ms-action ms-label-active">label</div>
+				<div class="ms-label ms-border ms-action2 ms-label-active">label</div>
 			</div>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/dark-mode-switcher@0.0.1/dist/dark.min.js"></script>
